k8s/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: nginx
  rules:
    - host: "localhost"
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: circle-web
              port:
                number: 80
    - host: "localhost"
      http:
        paths:
          - pathType: Prefix
            path: /api
            backend:
              service:
                name: circle-auth
                port:
                  number: 80
